# cotton-filter

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  README_Windows.md  build_windows_exe.sh  cotton-filter.bat  cotton_filter.py  index.html  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  tsconfig.json  vite.config.ts  棉花筛选.bat
.github/scripts/: build_windows.py
.github/workflows/: build.yml
backend/: __init__.py  server.py
cotton_filter_app/: __init__.py  build_info.py  constants.py  file_utils.py  gui.py  header.py  models.py  processor.py  rules.py  scoring.py  text_utils.py  updater.py  write_build_info.py
installer/: cotton-filter.iss
scripts/: build-backend.mjs  bump-version.mjs  write-updater-manifest.mjs
src/: App.tsx  RulesView.tsx  api.ts  backend.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: hooks.nsh
src-tauri/src/: lib.rs  main.rs
tests/: test_backend.py  test_filtering.py  test_updater.py
