[project]
name = "cotton-filter"
version = "0.1.0"
description = "Excel cotton resource filtering desktop app"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi[standard]",
    "openpyxl",
    "pandas",
    "pyinstaller",
    "uvicorn[standard]",
    "xlrd",
]

[tool.uv]
package = false
