[package]
name = "cotton-filter"
version = "1.2.5"
description = "Excel cotton resource filtering desktop app"
authors = ["zhaodesen"]
edition = "2021"

[lib]
name = "cotton_filter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cotton-filter"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
